[package]
name = "ethereum-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.2", features = ["full"] }
ethers = { version = "2.0.14" }  # 启用全功能+tokio异步运行时
ethers-core = "2.0.14"  # 核心类型和trait
ethers-providers = "2.0.14"  # JSON-RPC客户端
ethers-signers = "2.0.14"  # 签名功能
ethers-contract = "2.0.14"  # 合约交互
ethers-middleware = "2.0.14"  # 中间件系统
#处理大数格式化（可选，方便ETH/代币单位转换）
num-format = "0.4.4"



# 日志记录
tracing = "0.1"
tracing-subscriber = "0.3"

# 工具库
hex = "0.4"
once_cell = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
bigdecimal = { version = "0.4.9", features = ["serde"] }
# 错误处理
thiserror = "2.0.17"
anyhow = "1.0"

# 配置管理
config = "0.15.19"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # JSON解析（ABI加载）

# 数据库（可选）
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
diesel = { version = "2.3.4", features = ["postgres", "r2d2", "chrono", "numeric", "serde_json"] }
redis = { version = "1.0.0", features = ["tokio-comp", "aio", "connection-manager"] }
r2d2 = "0.8.1"
env_logger = "0.11.8"
log = "0.4.29"
async-trait = "0.1.89"
lazy_static = "1.5.0"
url = "2.5.7"
rand = "0.8.5"


#[dev-dependencies]
#tokio = { version = "1.0", features = ["full", "test-util"] }
#tempfile = "3.0"
#
#[profile.release]
#opt-level = 3
#lto = true
#codegen-units = 1