[package]
name = "ethereum-rs"
version = "0.1.0"
edition = "2024"
# 新增：指定rust版本（避免编译兼容问题）
rust-version = "1.85.0"
# 新增：默认编译目标（提升性能）
default-run = "ethereum-rs"

[dependencies]
tokio = { version = "1.47.2", features = ["full"] }
ethers = { version = "2.0.14" }  # 启用全功能+tokio异步运行时
ethers-core = "2.0.14"  # 核心类型和trait
ethers-providers = "2.0.14"  # JSON-RPC客户端
ethers-signers = "2.0.14"  # 签名功能
ethers-contract = "2.0.14"  # 合约交互
ethers-middleware = "2.0.14"  # 中间件系统

# ===== 数据格式化/大数处理 =====
num-format = "0.4.4"
bigdecimal = { version = "0.4.9", features = ["serde"] }
hex = "0.4"

# ===== 日志/监控 =====
env_logger = "0.11.8"
log = "0.4.29"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# ===== 错误处理 =====
thiserror = "2.0.17"
anyhow = "1.0.86"  # 锁定小版本

# ===== 配置管理 =====
config = { version = "0.15.19", features = ["toml", "json"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"


# ===== 数据库 =====
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] }
bb8 = "0.9.1"
diesel = { version = "2.3.4", features = ["postgres", "chrono", "numeric", "serde_json"] }
redis = { version = "1.0.0", features = ["tokio-comp", "aio", "connection-manager"] }
# 生命周期辅助,用于解决事务中的异步借用
futures-util = "0.3.30"

# 工具库
once_cell = "1.21.3"
# 异步类型转换支持
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = "0.1.89"
lazy_static = "1.5.0"
url = { version = "2.5.7", features = ["serde"] }
rand = { version = "0.8.5", features = ["std"] }
toml = "0.8.23"


# 文件监听
notify = "8.2.0"
arc-swap = "1.7.1"

#[dev-dependencies]
#tokio = { version = "1.0", features = ["full", "test-util"] }
#tempfile = "3.0"
#
#[profile.release]
#opt-level = 3
#lto = true
#codegen-units = 1


#[profile.release]
## 生产环境编译优化（极致性能）
#opt-level = 3          # 最高优化级别
#lto = true             # 链接时优化（减少体积+提升性能）
#codegen-units = 1      # 单代码生成单元（提升优化效果）
#panic = "abort"        # 恐慌时直接终止（减少二进制体积）
#strip = true           # 剥离调试信息（减少体积）
## 启用增量编译（加速二次构建）
#incremental = true